# branchline

./: .branchline-demo-left.txt  .gitignore  README.md  angular.json  package-lock.json  package.json  release.config.example.jsonc  release.config.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: advanced.rs  branch.rs  cherry_pick.rs  commit.rs  conflicts.rs  diagnostics.rs  diff.rs  git_detect.rs  git_env.rs  github_auth.rs  hosts.rs  identity.rs  ignore.rs  jira.rs  locks.rs  log.rs  merge.rs  mod.rs  onboarding.rs  pull_requests.rs  rebase.rs  release.rs  remotes.rs  repos.rs  safety.rs  settings.rs  ssh_setup.rs  stage.rs  stash.rs  status.rs  submodules.rs  tags.rs  undo.rs  workflows.rs  worktrees.rs
src-tauri/src/domain/: mod.rs  safety.rs  undo.rs
src-tauri/src/infrastructure/: diagnostics.rs  git2_repo.rs  git_cli.rs  mock_providers.rs  mod.rs  repo_watch.rs  sqlite.rs
src-tauri/target-check/: .rustc_info.json
src-tauri/target-check/debug/.fingerprint/adler2-773cafe560d51952/: lib-adler2  lib-adler2.json
src-tauri/target-check/debug/.fingerprint/adler2-f07472d6c822cb97/: lib-adler2  lib-adler2.json
src-tauri/target-check/debug/.fingerprint/ahash-06cedd34417dbba5/: lib-ahash  lib-ahash.json
src-tauri/target-check/debug/.fingerprint/ahash-83d792619ad5fc23/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target-check/debug/.fingerprint/ahash-a820992f0e354f1e/: build-script-build-script-build  (+1 more)
(+1329 files in other folders)
