[package]
name = "app"
version = "0.1.1"
description = "Branchline — premium desktop Git client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
git2 = { version = "0.19", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
which = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
